alignment fix

--- a/src/components/Low-Order/ProjectTags/ProjectTags.css
+++ b/src/components/Low-Order/ProjectTags/ProjectTags.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 0.4rem;
     grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
-    text-align: center;
+	align-content: center;
     overflow: hidden;
 }
 
